*Empty MediaWiki Message*

--- a/Ýewropa.mw
+++ b/Ýewropa.mw
@@ -5,22 +5,25 @@
 {{commons|Europe - Europa}}
 
 * [[Albaniýa]]
-* [[Andora]]
+* [[Andorra]]
 * [[Awstriýa]]
-* [[Belarus]], [[Belorusiýa]]
+* [[Belarus]] ([[Belorusiýa]])
 * [[Belgiýa]]
-* [[Belorusiýa]]
 * [[Beýik Britaniýa]]
 * [[Bolgariýa]]
 * [[Bosniýa we Gersegowina]]
-* [[Çeh Respublikasy]]
+* [[Çehiýa]]
 * [[Çernogoriýa]]
 * [[Daniýa]]
 * [[Estoniýa]]
+* [[Farer adalary]]
 * [[Finlýandiýa]]
 * [[Fransiýa]]
+* [[Gazagystan]]
 * [[Germaniýa]]
+* [[Gibraltar]]
 * [[Gresiýa]]
+* [[Gruziýa]]
 * [[Horwatiýa]]
 * [[Irlandiýa]]
 * [[Islandiýa]]
@@ -29,14 +32,16 @@
 * [[Kipr]]
 * [[Latwiýa]]
 * [[Lihtenşteýn]]
-* [[Litwa]], [[Litwiýa]]
+* [[Litwa]]
 * [[Lýuksemburg]]
 * [[Makedoniýa]]
 * [[Malta]]
-* [[Moldowa]], [[Moldawiýa]]
+* [[Moldawiýa]], [[Moldowa]]
+* [[Monako]]
 * [[Niderlandlar]]
 * [[Norwegiýa]]
 * [[Polşa]]
+* [[Portugaliýa]]
 * [[Rumyniýa]]
 * [[Russiýa]]
 * [[San-Marino]]
@@ -45,9 +50,7 @@
 * [[Sloweniýa]]
 * [[Şwesiýa]]
 * [[Şweýsariýa]]
-* [[Türkiýe]]
 * [[Ukraina]]
-* [[Watikan Şäheri]]
 * [[Wengriýa]]
 
 [[Kategoriýa:Ýewropa| ]]
