*Empty MediaWiki Message*

--- a/Ýewropa.mw
+++ b/Ýewropa.mw
@@ -1,8 +1,5 @@
 [[Faýl:Europe satellite orthographic.jpg|right|450px]]
 '''Ýewropa''' [[Dünýä]]da bir materik.
-[[Faýl:Europa zemljevid.png|right|thumb|450px]]
-
-{{commons|Europe - Europa}}
 
 * [[Albaniýa]]
 * [[Andorra]]
@@ -50,8 +47,15 @@
 * [[Sloweniýa]]
 * [[Şwesiýa]]
 * [[Şweýsariýa]]
+* [[Türkiýe]]
+* [[Watikan Şäheri]]
 * [[Ukraina]]
 * [[Wengriýa]]
+
+[[Faýl:Europa zemljevid.png|right|thumb|450px]]
+
+
+{{commons|Europe - Europa}}
 
 [[Kategoriýa:Ýewropa| ]]
 
@@ -150,6 +154,7 @@
 [[ka:ევროპა]]
 [[kab:Turuft]]
 [[kg:Mputu]]
+[[kaa:Evropa]]
 [[kk:Еуропа]]
 [[kl:Europa]]
 [[km:អឺរ៉ុប]]
@@ -256,6 +261,7 @@
 [[uk:Європа]]
 [[ur:یورپ]]
 [[uz:Yevropa]]
+[[ug:ياۋرۇپا]]
 [[vec:Eoropa]]
 [[vi:Châu Âu]]
 [[vls:Europa]]
