--- a/Döwletler.mw
+++ b/Döwletler.mw
@@ -40,7 +40,7 @@
 *	[[Kokos adalary]]
 *	[[Merkezi Afrika Respublikasy]]
 *	[[Kongo]]
-*	[[Kot-d'Iwuar]] ([[Pil süňki kenary]])
+*	[[Kot-d'Iwuar]] ([[Şirmaýy Kenar]])
 *	[[Kuka adalary]]
 *	[[Çili]]
 *	[[Kamerun]]
