--- a/Döwletler.mw
+++ b/Döwletler.mw
@@ -1,250 +1,264 @@
 '''Döwlet'''
 
 === Döwletler ===
-*	[[Andorra]]
-*	[[Birleşen Arap Emirlikleri]]
-*	[[Owganystan]]
-*	[[Antigua we Barbuda]]
-*	[[Anguilla]]
-*	[[Albaniýa]]
-*	[[Ermenistan]]
-*	[[Niderland Antil adalary]]
-*	[[Angola]]
-*	[[Antarktida]]
-*	[[Argentina]]
-*	[[Amerikan Samoa]]
-*	[[Awstriýa]]
-*	[[Awstraliýa]]
-*	[[Aruba]]
-*	[[Azerbaýjan]]
-*	[[Bosniýa we Gersegowina]]
-*	[[Barbados]]
-*	[[Bangladeş]]
-*	[[Belgiýa]]
-*	[[Burkina Faso]]
-*	[[Bolgariýa]]
-*	[[Bahreýn]]
-*	[[Burundi]]
-*	[[Benin]]
-*	[[Bermuda adalary]]
-*	[[Bruneý]]
-*	[[Boliwiýa]]
-*	[[Braziliýa]]
-*	[[Bagama adalary]] ([[Bahamalar]])
-*	[[Butan]]
-*	[[Buwe adasy]]
-*	[[Botswana]]
-*	[[Belarus]] ([[Belorusiýa]])
-*	[[Beliz]]
-*	[[Kanada]]
-*	[[Kokos adalary]]
-*	[[Merkezi Afrika Respublikasy]]
-*	[[Kongo]]
-*	[[Kot-d'Iwuar]] ([[Şirmaýy Kenar]])
-*	[[Kuka adalary]]
-*	[[Çili]]
-*	[[Kamerun]]
-*	[[Hytaý]]
-*	[[Kolumbiýa]]
-*	[[Kosta-Rika]]
-*	[[Kuba]]
-*	[[Gök Burun adalary]] ([[Kabo Werde]])
-*	[[Roždestwa adalary]]
-*	[[Kipr]]
-*	[[Çehiýa]]
-*	[[Germaniýa]]
-*	[[Jibuti]]
-*	[[Daniýa]]
-*	[[Dominika]]
-*	[[Dominikan Respublikasy]]
-*	[[Alžir]] ([[Jezaýyr]])
-*	[[Ekwador]]
-*	[[Estoniýa]]
-*	[[Müsür]]
-*	[[Günbatar Sahara]]
-*	[[Eritreýa]]
-*	[[Ispaniýa]]
-*	[[Efiopiýa]]
-*	[[Finlýandiýa]]
-*	[[Fiji]]
-*	[[Folklend adalary]]
-*	[[Mikroneziýa]]
-*	[[Farer adalary]]
-*	[[Fransiýa]]
-*	[[Gabon]]
-*	[[Beýik Britaniýa]]
-*	[[Grenada]]
-*	[[Gruziýa]]
-*	[[Fransuz Gwiana]]
-*	[[Gernsi]]
-*	[[Gana]]
-*	[[Gibraltar]]
-*	[[Grenlandiýa]]
-*	[[Gambiýa]]
-*	[[Gwineýa]]
-*	[[Gwadelupa]]
-*	[[Ekwator Gwineýasy]]
-*	[[Gresiýa]]
-*	[[Günorta Georgiýa we Günorta Sandwiç adalary]]
-*	[[Gwatemala]]
-*	[[Guam]]
-*	[[Gwineýa-Bisau]]
-*	[[Gaýana]]
-*	[[Gonkong]]
-*	[[Herd we Makdonald]]
-*	[[Gonduras]]
-*	[[Horwatiýa]]
-*	[[Gaiti]]
-*	[[Wengriýa]]
-*	[[Şweýsariýa]]
-*	[[Indoneziýa]]
-*	[[Irlandiýa]]
-*	[[Ysraýyl]]
-*	[[Men adalary]]
-*	[[Hindistan]]
-*	[[Hindi ummanyndaky britan territoriýasy]]
-*	[[Yrak]]
-*	[[Eýran]]
-*	[[Islandiýa]]
-*	[[Italiýa]]
-*	[[Jersi]]
-*	[[Ýamaýka]]
-*	[[Iordaniýa]]
-*	[[Ýaponiýa]]
-*	[[Keniýa]]
-*	[[Gyrgyzystan]]
-*	[[Kamboja]]
-*	[[Kiribati]]
-*	[[Komor adalary]]
-*	[[Sent-Kitts we Newis]]
-*	[[Kosowo]]
-*	[[Demirgazyk Koreýa]]
-*	[[Günorta Koreýa]]
-*	[[Kuweýt]]
-*	[[Kaýmanow adalary]]
-*	[[Gazagystan]]
-*	[[Laos]]
-*	[[Liwan]]
-*	[[Sent-Lýusiýa]]
-*	[[Lihtenşteýn]]
-*	[[Şri-Lanka]]
-*	[[Liberiýa]]
-*	[[Lesoto]]
-*	[[Litwa]]
-*	[[Lýuksemburg]]
-*	[[Latwiýa]]
-*	[[Liwiýa]]
-*	[[Marokko]]
-*	[[Monako]]
-*	[[Moldawiýa]]
-*	[[Çernogoriýa]]
-*	[[Madagaskar]]
-*	[[Marşal adalary]]
-*	[[Makedoniýa]]
-*	[[Mali]]
-*	[[Mýanma]] ([[Birma]])
-*	[[Mongoliýa]]
-*	[[Makao]]
-*	[[Demirgazyk Marian adalary]]
-*	[[Martinika]]
-*	[[Mawritaniýa]]
-*	[[Montserrat]]
-*	[[Malta]]
-*	[[Mawrikiý]]
-*	[[Maldiwler]] ([[Maldiw adalary]])
-*	[[Malawi]]
-*	[[Meksika]]
-*	[[Malaýziýa]]
-*	[[Mozambik]]
-*	[[Namibiýa]]
-*	[[Täze Kaledoniýa]]
-*	[[Niger]]
-*	[[Norfolk]]
-*	[[Nigeriýa]]
-*	[[Nikaragua]]
-*	[[Niderlandlar]]
-*	[[Norwegiýa]]
-*	[[Nepal]]
-*	[[Nauru]]
-*	[[Niue]]
-*	[[Täze Zelandiýa]]
-*	[[Oman]]
-*	[[Panama]]
-*	[[Peru]]
-*	[[Fransuz Polineziýa]]
-*	[[Papua-Täze Gwineýa]]
-*	[[Filippinler]]
-*	[[Päkistan]]
-*	[[Polşa]]
-*	[[Sen-Per i Mikelon]]
-*	[[Pitkern]]
-*	[[Puerto-Riko]]
-*	[[Portugaliýa]]
-*	[[Palau]]
-*	[[Paragwaý]]
-*	[[Katar]]
-*	[[Reýunon]]
-*	[[Rumyniýa]]
-*	[[Serbiýa]]
-*	[[Russiýa]]
-*	[[Ruanda]]
-*	[[Saud Arabystany]]
-*	[[Solomon adalary]]
-*	[[Seýşel adalary]]
-*	[[Sudan]]
-*	[[Şwesiýa]]
-*	[[Singapur]]
-*	[[Keramatly Ýelena adalary]]
-*	[[Sloweniýa]]
-*	[[Şpisbergen we Ýan-Maýen]]
-*	[[Slowakiýa]]
-*	[[Sýerra-Leone]]
-*	[[San-Marino]]
-*	[[Senegal]]
-*	[[Somali]]
-*	[[Surinam]]
-*	[[San-Tome we Prinsipi]]
-*	[[Salwador]]
-*	[[Siriýa]]
-*	[[Swazilend]]
-*	[[Tibet]]
-*	[[Týorks we Kaýkos]]
-*	[[Çad]]
-*	[[Fransiýanyň Günorta Antarktida territoriýalary]]
-*	[[Togo]]
-*	[[Taýland]]
-*	[[Täjigistan]]
-*	[[Tokelau]]
-*	[[Gündogar Timor]]
-*	[[Türkmenistan]]
-*	[[Tunis]]
-*	[[Tonga]]
-*	[[Türkiýe]]
-*	[[Trinidad we Tobago]]
-*	[[Tuwalu]]
-*	[[Taýwan]]
-*	[[Tanzaniýa]]
-*	[[Ukraina]]
-*	[[Uganda]]
-*	[[Daşarky kiçi adalar]] ([[ABŞ]])
-*	[[Amerikanyň Birleşen Ştatlary]] ([[ABŞ]])
-*	[[Urugwaý]]
-*	[[Özbegistan]]
-*	[[Watikan]]
-*	[[Sent-Winsent we Grenadinler]]
-*	[[Wenesuela]]
-*	[[Britan Wirgin adalary]]
-*	[[Amerikan Wirgin adalary]]
-*	[[Wýetnam]]
-*	[[Wanuatu]]
-*	[[Uollis we Futuna]]
-*	[[Samoa]]
-*	[[Ýemen]]
-*	[[Maýotta]]
-*	[[Günorta Afrika]]
-*	[[Zambiýa]]
-*	[[Zair]]
-*	[[Zimbabwe]]
+#[[Andorra]]
+# [[Birleşen Arap Emirlikleri]]
+# [[Owganystan]]
+# [[Antigua we Barbuda]]
+# [[Anguilla]]
+# [[Albaniýa]]
+# [[Ermenistan]]
+# [[Niderland Antil adalary]]
+# [[Angola]]
+# [[Antarktida]]
+# [[Argentina]]
+# [[Amerikan Samoa]]
+# [[Awstriýa]]
+# [[Awstraliýa]]
+# [[Aruba]]
+# [[Azerbaýjan]]
+# [[Bosniýa we Gersegowina]]
+# [[Barbados]]
+# [[Bangladeş]]
+# [[Belgiýa]]
+# [[Burkina Faso]]
+# [[Bolgariýa]]
+# [[Bahreýn]]
+# [[Burundi]]
+# [[Benin]]
+# [[Bermuda adalary]]
+# [[Bruneý]]
+# [[Boliwiýa]]
+# [[Braziliýa]]
+# [[Bagama adalary]] ([[Bahamalar]])
+# [[Butan]]
+# [[Buwe adasy]]
+# [[Botswana]]
+# [[Belarus]] ([[Belorusiýa]])
+# [[Beliz]]
+# [[Kanada]]
+# [[Kokos adalary]]
+# [[Merkezi Afrika Respublikasy]]
+# [[Kongo]]
+# [[Kot-d'Iwuar]] ([[Şirmaýy Kenar]])
+# [[Kuka adalary]]
+# [[Çili]]
+# [[Kamerun]]
+# [[Hytaý]]
+# [[Kolumbiýa]]
+# [[Kosta-Rika]]
+# [[Kuba]]
+# [[Gök Burun adalary]] ([[Kabo Werde]])
+# [[Roždestwa adalary]]
+# [[Kipr]]
+# [[Çehiýa]]
+# [[Germaniýa]]
+# [[Jibuti]]
+# [[Daniýa]]
+# [[Dominika]]
+# [[Dominikan Respublikasy]]
+# [[Alžir]] ([[Jezaýyr]])
+# [[Ekwador]]
+# [[Estoniýa]]
+# [[Müsür]]
+# [[Günbatar Sahara]]
+# [[Eritreýa]]
+# [[Ispaniýa]]
+# [[Efiopiýa]]
+# [[Finlýandiýa]]
+# [[Fiji]]
+# [[Folklend adalary]]
+# [[Mikroneziýa]]
+# [[Farer adalary]]
+# [[Fransiýa]]
+# [[Gabon]]
+# [[Beýik Britaniýa]]
+# [[Grenada]]
+# [[Gruziýa]]
+# [[Fransuz Gwiana]]
+# [[Gernsi]]
+# [[Gana]]
+# [[Gibraltar]]
+# [[Grenlandiýa]]
+# [[Gambiýa]]
+# [[Gwineýa]]
+# [[Gwadelupa]]
+# [[Ekwator Gwineýasy]]
+# [[Gresiýa]]
+# [[Günorta Georgiýa we Günorta Sandwiç adalary]]
+# [[Gwatemala]]
+# [[Guam]]
+# [[Gwineýa-Bisau]]
+# [[Gaýana]]
+# [[Gonkong]]
+# [[Herd we Makdonald]]
+# [[Gonduras]]
+# [[Horwatiýa]]
+# [[Gaiti]]
+# [[Wengriýa]]
+# [[Şweýsariýa]]
+# [[Indoneziýa]]
+# [[Irlandiýa]]
+# [[Ysraýyl]]
+# [[Men adalary]]
+# [[Hindistan]]
+# [[Hindi ummanyndaky britan territoriýasy]]
+# [[Yrak]]
+# [[Eýran]]
+# [[Islandiýa]]
+# [[Italiýa]]
+# [[Jersi]]
+# [[Ýamaýka]]
+# [[Iordaniýa]]
+# [[Ýaponiýa]]
+# [[Keniýa]]
+# [[Gyrgyzystan]]
+# [[Kamboja]]
+# [[Kiribati]]
+# [[Komor adalary]]
+# [[Sent-Kitts we Newis]]
+# [[Kosowo]]
+# [[Demirgazyk Koreýa]]
+# [[Günorta Koreýa]]
+# [[Kuweýt]]
+# [[Kaýmanow adalary]]
+# [[Gazagystan]]
+# [[Laos]]
+# [[Liwan]]
+# [[Sent-Lýusiýa]]
+# [[Lihtenşteýn]]
+# [[Şri-Lanka]]
+# [[Liberiýa]]
+# [[Lesoto]]
+# [[Litwa]]
+# [[Lýuksemburg]]
+# [[Latwiýa]]
+# [[Liwiýa]]
+# [[Marokko]]
+# [[Monako]]
+# [[Moldawiýa]]
+# [[Çernogoriýa]]
+# [[Madagaskar]]
+# [[Marşal adalary]]
+# [[Makedoniýa]]
+# [[Mali]]
+# [[Mýanma]] ([[Birma]])
+# [[Mongoliýa]]
+# [[Makao]]
+# [[Demirgazyk Marian adalary]]
+# [[Martinika]]
+# [[Mawritaniýa]]
+# [[Montserrat]]
+# [[Malta]]
+# [[Mawrikiý]]
+# [[Maldiwler]] ([[Maldiw adalary]])
+# [[Malawi]]
+# [[Meksika]]
+# [[Malaýziýa]]
+# [[Mozambik]]
+# [[Namibiýa]]
+# [[Täze Kaledoniýa]]
+# [[Niger]]
+# [[Norfolk]]
+# [[Nigeriýa]]
+# [[Nikaragua]]
+# [[Niderlandlar]]
+# [[Norwegiýa]]
+# [[Nepal]]
+# [[Nauru]]
+# [[Niue]]
+# [[Täze Zelandiýa]]
+# [[Oman]]
+# [[Panama]]
+# [[Peru]]
+# [[Fransuz Polineziýa]]
+# [[Papua-Täze Gwineýa]]
+# [[Filippinler]]
+# [[Päkistan]]
+# [[Polşa]]
+# [[Sen-Per i Mikelon]]
+# [[Pitkern]]
+# [[Puerto-Riko]]
+# [[Portugaliýa]]
+# [[Palau]]
+# [[Paragwaý]]
+# [[Katar]]
+# [[Reýunon]]
+# [[Rumyniýa]]
+# [[Serbiýa]]
+# [[Russiýa]]
+# [[Ruanda]]
+# [[Saud Arabystany]]
+# [[Solomon adalary]]
+# [[Seýşel adalary]]
+# [[Sudan]]
+# [[Şwesiýa]]
+# [[Singapur]]
+# [[Keramatly Ýelena adalary]]
+# [[Sloweniýa]]
+# [[Şpisbergen we Ýan-Maýen]]
+# [[Slowakiýa]]
+# [[Sýerra-Leone]]
+# [[San-Marino]]
+# [[Senegal]]
+# [[Somali]]
+# [[Surinam]]
+# [[San-Tome we Prinsipi]]
+# [[Salwador]]
+# [[Siriýa]]
+# [[Swazilend]]
+# [[Tibet]]
+# [[Týorks we Kaýkos]]
+# [[Çad]]
+# [[Fransiýanyň Günorta Antarktida territoriýalary]]
+# [[Togo]]
+# [[Taýland]]
+# [[Täjigistan]]
+# [[Tokelau]]
+# [[Gündogar Timor]]
+# [[Türkmenistan]]
+# [[Tunis]]
+# [[Tonga]]
+# [[Türkiýe]]
+# [[Trinidad we Tobago]]
+# [[Tuwalu]]
+# [[Taýwan]]
+# [[Tanzaniýa]]
+# [[Ukraina]]
+# [[Uganda]]
+# [[Daşarky kiçi adalar]] ([[ABŞ]])
+# [[Amerikanyň Birleşen Ştatlary]] ([[ABŞ]])
+# [[Urugwaý]]
+# [[Özbegistan]]
+# [[Watikan]]
+# [[Sent-Winsent we Grenadinler]]
+# [[Wenesuela]]
+# [[Britan Wirgin adalary]]
+# [[Amerikan Wirgin adalary]]
+# [[Wýetnam]]
+# [[Wanuatu]]
+# [[Uollis we Futuna]]
+# [[Samoa]]
+# [[Ýemen]]
+# [[Maýotta]]
+# [[Günorta Afrika]]
+# [[Zambiýa]]
+# [[Zair]]
+# [[Zimbabwe]]
+# [[Sent-Winsent we Grenadinler]]
+# [[Wenesuela]]
+# [[Britan Wirgin adalary]]
+# [[Amerikan Wirgin adalary]]
+# [[Wýetnam]]
+# [[Wanuatu]]
+# [[Uollis we Futuna]]
+# [[Samoa]]
+# [[Ýemen]]
+# [[Maýotta]]
+# [[Günorta Afrika]]
+# [[Zambiýa]]
+# [[Zair]]
+# [[Zimbabwe]]
 
 === Sahypalar ===
 
