--- a/Türkmen_elipbiýi.mw
+++ b/Türkmen_elipbiýi.mw
@@ -12,6 +12,225 @@ Bular:
 <td><tt> a b ç d e ä f g h i j ž k l m n ň o ö p r s ş t u ü w y ý z</tt></td></tr>
 </table></p>
 
+{| class="wikitable" style="text-align:center;"
+![[latyn]]
+![[kiril]]
+![[IPA]]
+![[latyn]] 1993
+![[latyn]] 1992-1993
+![[latyn]] 1927-1940
+|-
+|'''A a'''
+|А а
+|class="IPA"|[a]
+|A a
+|A a
+|A a
+|-
+|'''B b'''
+|Б б
+|class="IPA"|[b]
+|B b
+|B b
+|B b
+|-
+|'''Ç ç'''
+|Ч ч
+|class="IPA"|[ʧ]
+|Ç ç
+|C c
+|C c
+|-
+|'''D d'''
+|Д д
+|class="IPA"|[d]
+|D d
+|D d
+|D d
+|-
+|'''E e'''
+|Е е
+|class="IPA"|[je], [e]
+|E e
+|E e
+|E e
+|-
+|'''Ä ä'''
+|Ә ә
+|class="IPA"|[æ]
+|Ä ä
+|Ea ea
+|Ә ә
+|-
+|'''F f'''
+|Ф ф
+|class="IPA"|[ɸ]
+|F f
+|F f
+|F f
+|-
+|'''G g'''
+|Г г
+|class="IPA"|[g~ʁ]
+|G g
+|G g
+|G g
+|-
+|'''H h'''
+|Х х
+|class="IPA"|[h~x]
+|H h
+|H h
+|H/X h/x
+|-
+|'''I i'''
+|И и
+|class="IPA"|[i]
+|I i
+|I i
+|I i
+|-
+|'''J j'''
+|Җ җ
+|class="IPA"|[ʤ]
+|J j
+|J j
+|Ç ç
+|-
+|'''Ž ž'''
+|Ж ж
+|class="IPA"|[ʒ]
+|£ ɾ
+|Jh jh
+|Ƶ ƶ
+|-
+|'''K k'''
+|К к
+|class="IPA"|[k~q]
+|K k
+|K k
+|K/Q k/q
+|-
+|'''L l'''
+|Л л
+|class="IPA"|[l]
+|L l
+|L l
+|L l
+|-
+|'''M m'''
+|М м
+|class="IPA"|[m]
+|M m
+|M m
+|M m
+|-
+|'''N n'''
+|Н н
+|class="IPA"|[n]
+|N n
+|N n
+|N n
+|-
+|'''Ň ň'''
+|Ң ң
+|class="IPA"|[ŋ]
+|Ñ ñ
+|Ng ng
+|Ŋ ŋ
+|-
+|'''O o'''
+|О о
+|class="IPA"|[o]
+|O o
+|O o
+|O o
+|-
+|'''Ö ö'''
+|Ө ө
+|class="IPA"|[ø]
+|Ö ö
+|Q q
+|Ө ө
+|-
+|'''P p'''
+|П п
+|class="IPA"|[p]
+|P p
+|P p
+|P p
+|-
+|'''R r'''
+|Р р
+|class="IPA"|[r]
+|R r
+|R r
+|R r
+|-
+|'''S s'''
+|С с
+|class="IPA"|[θ]
+|S s
+|S s
+|S s
+|-
+|'''Ş ş'''
+|Ш ш
+|class="IPA"|[ʃ]
+|$ ¢
+|Sh sh
+|Ş ş
+|-
+|'''T t'''
+|Т т
+|class="IPA"|[t]
+|T t
+|T t
+|T t
+|-
+|'''U u'''
+|У у
+|class="IPA"|[u]
+|U u
+|U u
+|U u
+|-
+|'''Ü ü'''
+|Ү ү
+|class="IPA"|[y]
+|Ü ü
+|V v
+|Y y
+|-
+|'''W w'''
+|В в
+|class="IPA"|[β]
+|W w
+|W w
+|V v
+|-
+|'''Y y'''
+|Ы ы
+|class="IPA"|[ɯ]
+|Y y
+|X x
+| -
+|-
+|'''Ý ý'''
+|Й й
+|class="IPA"|[j]
+|Ұ ÿ
+|Y y
+|J j
+|-
+|'''Z z'''
+|З з
+|class="IPA"|[ð]
+|Z z
+|Z z
+|Z z
+|}
+
 == Çekimli we çekimsizler ==
 '''a''', '''e''', '''ä''', '''y''', '''i''', '''o''', '''ö''', '''u''', '''ü''' harplary '''çekimli sesleri''', beýleki harplar bolsa '''çekimsiz sesleri''' aňlatmak üçin ulanylýar.
 
