*Empty MediaWiki Message*

--- a/Belarusiýanyň_döwlet_informatika_we_radioelektronika_uniwersiteti_(BDIRU).mw
+++ b/Belarusiýanyň_döwlet_informatika_we_radioelektronika_uniwersiteti_(BDIRU).mw
@@ -1,6 +1,6 @@
 <!--
 {{Infobox Uniwersiteti
-|name=Belarusiýaň Döwlet Informatika we Radioelektronika Uniwersiteti
+|name=Belorussiýanyň Döwlet Informatika we Radioelektronika Uniwersiteti
 |city=[[Belarus]], [[Minsk]]
 }}
 -->
@@ -90,7 +90,7 @@
 
  |}
 
-'''[[Belarus|Belarusiýan]] döwlet informatika we radioelektronika uniwersiteti''' ('''BDIRU''') (Belarusian: Беларускі дзяржаўны ўніверсітэт інфарматыкі і радыёэлектронікі; Russian: Белорусский государственный университет информатики и радиоэлектроники) (1993-nji ýyla çenli [[Minsk]]iniň radiotehniki instituty (MRTI)- informasion tehnologiýa, radiotehnika, elektronika we telekomunikasiýa ugrunda [[Ýewropa]], [[GDA]] we dünyä belli Belarusiýaň öňdebaryjy uniwersiteti. BDIRU 1964-nji ýylyň Mart aýynyň 15-ne esaslandyryldy. 
+'''[[Belarus|Belarusiýan]] döwlet informatika we radioelektronika uniwersiteti''' ('''BDIRU''') (Belarusian: Беларускі дзяржаўны ўніверсітэт інфарматыкі і радыёэлектронікі; Russian: Белорусский государственный университет информатики и радиоэлектроники) (1993-nji ýyla çenli [[Minsk]]iniň radiotehniki instituty (MRTI)- informasion tehnologiýa, radiotehnika, elektronika we telekomunikasiýa ugrunda [[Ýewropa]], [[GDA]] we dünyä belli Belorussiýanyň öňdebaryjy uniwersiteti. BDIRU 1964-nji ýylyň Mart aýynyň 15-ne esaslandyryldy. 
 Häzirki wagtda uniwersitet 30 hünär we 25 ýöriteleşdirilen kompýuter, informatika, senagat elektronika, emeli akyl, radiotehnika, telekommunikasiýa, medisina elektronikasy we ykdysadyýet ugurlaryndan inžener hünärmenleri taýýarlaýar. 10 fakultetde we 35 bölümde gündizki, agşamky, zaoçny we aralyk okuw görnüşlerinde 15000-den gowrak talyp bilim alýar, şolaryň arasynda hem 350 sany daşary ýurtly talyp bar. 2001-nji ýyldan bäri BDIRU-da magistratura bölümi açyk, häzirki wagtda 27 sany magistrlik, 26 sany aspirantura we 8 sany doktorantura ýokary hünärleri ýerli we daşary ýurt raýatlaryna hödürlenýär. Uniwersitetde dissertasiýany goramak üçin 13 tehniki we 2 fizika-matematika hünärlerini öz içine alýan 6 sany doktorçylyk geňeşi hereket edýär. Şu günki günde BDIRU-nyň aspiratura bölüminde 23 sany daşary ýurt hünärmeni okaýar.
 
 Uniwersitete girmek üçin rus ýa belarus dili, fizika, matematika, daşary yurt dili (diňe marketing, ykdysadyýet we önümçiligi dolandyryş ugurlarynda) sapaklary boýunça merkezi synag tabşyrmaly.
@@ -147,7 +147,7 @@ Täzelikçiligi we studentleň praktika türgenleşigi berkitmek üçin BDIRU-da
 2009-njy ýylyň Aprel aýynyň 9 “High Technology Park” guramaň kömegi bilen baglanşykda uniwersitet türgenleşik we täzelikçilik “EPAM systems” kompleksini açyldy.
 
 == Kitaphana ==
-BDIRU-nyň Kitaphanasy 1964-nji ýylda Belarusiýaň Politehniki Institutyň (häzirki Belarusiýaň Milli Tehniki Uniwersiteti BMTU) kitaphanasynyň esasynda döredildi. Meýdany: 1821.12 m² we 4 okuw jaýlarynda we 1-nji student obşitinde ýerleşýar.
+BDIRU-nyň Kitaphanasy 1964-nji ýylda Belorussiýanyň Politehniki Institutyň (häzirki Belorussiýanyň Milli Tehniki Uniwersiteti BMTU) kitaphanasynyň esasynda döredildi. Meýdany: 1821.12 m² we 4 okuw jaýlarynda we 1-nji student obşitinde ýerleşýar.
 Hyzmatlary:
 * Elektronik resurlaryň we hyzmatlaryň habar hem bilim merkezi (AAJ “Priorbank” we BDIRU-nyň baglanşykda taslamasy). 2009-njy ýylyň sentýabyr aýynda açyldy. Kitaphanaň elektronik resurslaryny hödür edýär
 * Kitaplaň we makalaryň eleçtronik katalogy
@@ -163,7 +163,7 @@ Hyzmatlary:
 * Elektron kitaphanasy. Elektron resurlaryň (kitaplaň elektron katalogy, metodik kitaplaryň elektron görnüşleri, doly tekst maglumat we okuw bazasy we beýleki elektron dokumentleri) we mugt interneta geçelge (2004-nji ýylyň niýabyr aýynda AAJ “Priorbank” we BDIRU-ň baglanşykda) hyzmatlaryny hödürleýar 
 * Kitaphanaň saýtyndan “Wirtual Salgy” hytmatyň kömegi bilen tüýs wagytda sorag-jogap alyp bolýar
 * Elektron katalog Kitaphanaň fondyndan kitaplaň kopiýalaryny zakaz etmäge kömek edýar ( 1992-nji ýyldan bäri). 2009-njy ýylyň başyna Kitaphanada 85000-den gowrak bibliografiýa ýazgylary bar
-* Uniwersitetiň ýerli chopýutelaryndan Belarusiýaň Milli Kitaphnasynyň “Okalýan wirtual zalyna” girmek mümkinçilik bar
+* Uniwersitetiň ýerli chopýutelaryndan Belorussiýanyň Milli Kitaphnasynyň “Okalýan wirtual zalyna” girmek mümkinçilik bar
 * Kabinetleň we bölümleň kitaphanasy
 * 3 abonementi iki okuw we bir edebiýat
 * Bibliografiýa apparaty
@@ -179,7 +179,7 @@ Studentler öz zehinini görkezmäge 44 sungat kollektiwlerine girip bilýar. Bu
 * Tans we sport kluby “Tango”
 * Milli saz topary
 * “Art-woýaž” teatr studiýasy
-* “Gamanina” folklýor topary (halk aýdymlaryň ansambly) Witebsk şäherinde 2008-nji ýylda geçirilen “Belarusiýaň ÝOJ-laň (ýokary okuw jaýlary) sungaty” atly ýaryşynyň ýeňijileri.
+* “Gamanina” folklýor topary (halk aýdymlaryň ansambly) Witebsk şäherinde 2008-nji ýylda geçirilen “Belorussiýanyň ÝOJ-laň (ýokary okuw jaýlary) sungaty” atly ýaryşynyň ýeňijileri.
 
 == “Impuls” gazeti ==
 “Impuls” atly öz gazeti çap edilýar. Gazetiň birinji nomeri çykany bäri (2001-nji ýylyň ýanwar aýynyň 19) ähli çaplary arhiwda saklanýar.
@@ -187,12 +187,12 @@ Studentler öz zehinini görkezmäge 44 sungat kollektiwlerine girip bilýar. Bu
 == Habar ==
 * “[http://epam.by/ EPAM] sintez” baglanşykda BDIRU-da okuw laboratoriýasy açyldy
 * [http://www.library.bsuir.by BDIRU-nyň kitaphanasy barada]
-* BELARUSIÝAŇ DÖWLET INFORMATIKA WE RADIOELEKTRONIKA UNIWERSITETI
+* Belorussiýanyň DÖWLET INFORMATIKA WE RADIOELEKTRONIKA UNIWERSITETI
 * BDIRU-nyň gazeti №9 (29-njy maý 2008-nji ýyl): Sen entäk bileňokmy, “ART-wakasiýaň” nämedigini? Sen hiç haçan bolmadyňmy bu mega tomaşada? Onda sen hakatdanam durmuşdan galdyň!
 * “Impuls” gazetiniň 2001-nji ýyldan bäri arhiwy
 
 == Gyzykly faktlar ==
-Olimpiýa oýunlarynda göreşde 3 gezek ýeňiji bolan, Belarus Respublikasynyň Milli Olimpiýa Komitetiniň Wise-Prezidenti, Belarusiýaň Göreş Federasiýaň Prezidenti, Hormatly Minsk şäheriniň raýaty Aleksandr Medwed BDIRU-da sport kämilliginiň bölüminiň başlygy bolup işleýar.
+Olimpiýa oýunlarynda göreşde 3 gezek ýeňiji bolan, Belarus Respublikasynyň Milli Olimpiýa Komitetiniň Wise-Prezidenti, Belorussiýanyň Göreş Federasiýaň Prezidenti, Hormatly Minsk şäheriniň raýaty Aleksandr Medwed BDIRU-da sport kämilliginiň bölüminiň başlygy bolup işleýar.
 
 == Halkar ==
 * [http://www.bsuir.by BDIRU-nyň resmi portaly]
