--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -7,9 +7,10 @@ Meýdany 20,4 mun kw km, ilaty 113,2 mun adam. Etrapda 3 şaherce, 8 geneşlik w
 [[Etrap]] fiziki-geografiki nukdaý nazardan 3 bölekden ybarat: gunorta Kopetdag, demirgazykda [[Garagum çöli]] we olaryn arasynda [[Ahal]] oazisinin etraba degili zolagy. Etrabyn in osen bolegi [[Ahal]] oazisidir. Bu oazisde ýurdumyzda belli [[Bagyr (oba)|Bagyr]], [[Köşi (oba)]], [[Herrikgala (oba)]], [[Gökje (oba)]], [[Gypjak (oba)]], [[Ýasmansalak]], [[Büzmeýin]] obalary ýerleşýarler. 
 
 Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we bakja ekerancylygy danecilik, maldarcylyk, ýenil, azyk senagatlary. Etrapda cagalar iýmiti zawody, jinsi matalaryny öndurýan fabrik işleýar.
+[[Faýl:Turkmenbashi street in the centre of Ashgabat.jpg|thumb|right|200px|Turkmenbashi kocesi, oktyabr 2009.]]
 
 == Bilim ==
-[[File:Ministry of oil and gas of Turkmenistan 2.jpg|thumb|right|150px| Nebit we Gaz ministrligi. [[Berzeňňi]]. Aşgabat.]]
+[[File:Ministry of oil and gas of Turkmenistan 2.jpg|thumb|right|200px| Nebit we Gaz ministrligi. [[Berzeňňi]]. Aşgabat.]]
 
 '''Aşgabatda ýerleşýän käbir ýokary okuw mekdepleri'''
 * [[Halkara türkmen-türk uniwersiteti]]
