robot üýtgetdi: [[ur:انگریزی]]

--- a/Iňlis_dili.mw
+++ b/Iňlis_dili.mw
@@ -225,7 +225,7 @@
 [[ty:Anglès]]
 [[ug:ئىنگلىز تىلى]]
 [[uk:Англійська мова]]
-[[ur:انگريزی]]
+[[ur:انگریزی]]
 [[uz:Ingliz tili]]
 [[vec:Łéngua inglexe]]
 [[vi:Tiếng Anh]]
