--- a/Dmitriý_Medwedew.mw
+++ b/Dmitriý_Medwedew.mw
@@ -1,5 +1,5 @@
 [[File:Dmitry Medvedev official large photo -5.jpg|220px]]
-'''Dmitriý Anatolyewiç Medwedew''' ([[Rus dili]]: Дмитрий Анатольевич Медведев) (d. [[14 sentýabr]] [[1965]], [[Leningrad]]) [[Russiýa]]'nyň prezidenti.
+'''Dmitriý Anatolyewiç Medwedew''' ([[Rus dili]]: Дмитрий Анатольевич Медведев) (d. [[14 sentýabr]] [[1965]], [[Leningrad]]) [[Russiýa]]nyň prezidenti.
 
 == Dış bağlantılar ==
 {{Commons|Dmitry Medvedev|Dmitri Medwedew}}
