--- a/Mongoliýa.mw
+++ b/Mongoliýa.mw
@@ -16,7 +16,7 @@
 | [[Ulan-Bator]]
 |-
 | '''[[Prezident]]'''
-| [[Nambaryn Enkhbayar]]
+| [[Tsakhiagiin Elbegdorj]]
 |-
 | '''[[Dil]]'''
 | [[Mongoliýa dili]]
