*Empty MediaWiki Message*

--- a/Gana.mw
+++ b/Gana.mw
@@ -83,8 +83,11 @@ Saglygy saklaýyşy: Ýurtda gyzzyrma, gökbogma, gyzamyk we ýokanç keseller g
 Iňlis dilinde çap edilýän gazetler: "Ganian taýms", "Deýli grefik" (hökümetiň gazeti). Hepdelik gazetler: "Mirror" (hökümetiň gazeti), "Standart" "Uikli spekteýtor", "Ekou" we "Eskpiriens". Ýurtda 1957-nji ýyldan bäri hökümetiň garamagyndaky Gana habarlar gullugy hereket edýär. 1965-nji ýyldan bäri teleýaýlymlar we 1935-nji ýyldan bäri bolsa radio-ýaýlymlar işleýär. 2002-nji ýylda ýurtda 40,5 müň adam internet ulgamyndan peýdalandy.
 Syýahatçylygy: Ýurduň geografik ýerleşişi, deňiz kenarlary, aw meýdanlary daşary ýurtly jahankeşdeleriň ünsüni çekýär. 1970-nji ýylda ýurtda syýahatçylygy, ösdürmek ugrunda işler durmuşa geçirilip başlandy. 1996-njy ýylda syýahatçylyk pudagyny ösdürmek barada2020-nji ýyla çenli döwür üçin toplumlaýyn milli meýilnama düzüldi. 1999-njy ýylda syýahatçylyk pudagy 342 million dollar girdeji getirdi. 2001-nji ýylda ýurda 438,8 müň daşary ýurtly jahankeşde geldi. Nige- „riya, Angliýa, Germaniýa, ABŞ we Fransiýa ýaly döwletlerden ýygy-ýygydan syýahatçylar gelýärler.
 
+{{Afrikada ýerleşýän ýurtlar}}
 
 [[Category:Gana| ]]
+
+
 
 [[ace:Ghana]]
 [[af:Ghana]]
