*Empty MediaWiki Message*

--- a/Mali.mw
+++ b/Mali.mw
@@ -48,6 +48,8 @@
 
 '''Mali''', bir [[döwlet]] ([[respublika]]) [[Afrika]]'da.
 
+{{Afrikada ýerleşýän ýurtlar}}
+
 [[Category:Mali|*]]
 
 [[ace:Mali]]
