*Empty MediaWiki Message*

--- a/Nigeriýa.mw
+++ b/Nigeriýa.mw
@@ -48,6 +48,8 @@
 
 '''Nigeria''', bir [[döwlet]] ([[respublika]]) [[Afrika]]'da.
 
+{{Afrikada ýerleşýän ýurtlar}}
+
 [[Kategoriýa:Nigeria| ]]
 
 [[ace:Nigeria]]
