*Empty MediaWiki Message*

--- a/Günorta_Afrika_Respublikasy.mw
+++ b/Günorta_Afrika_Respublikasy.mw
@@ -89,6 +89,8 @@ Belli günorta afrikaly režissýor Leon Şusteriň surata düşüren filmi Berl
 
 Şeýle hem günorta afrikaly režissýorlar Ramadan Sulemanyň (“Zulunyň söýgi haty” filmi) we Teddi Materiň (“Maks we Mona” filmi) sungatyna ýokary baha berildi. Soňky ýyllarda Keýptaun şäheri kinoindustriýanyň merkezine öwrülip barýar. Her ýyl bu ýerde 12-13 sany kino surata düşürilýär.
 
+{{Afrikada ýerleşýän ýurtlar}}
+
 [[Category:Afrika]]
 [[Category:Döwletler]]
 
