--- a/Gana.mw
+++ b/Gana.mw
@@ -1,50 +1,62 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0.5em 0 1em 1em; background: #ffffff; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Ghana'''<br/>'''Republic of Ghana'''</big></big>
-|-
-| style="background:#ffffff;" align=center colspan=2 |
-{| border=0 cellpadding=2 cellspacing=0
-| align=center width=148 | [[Image:Flag of Ghana.svg|125px|Ghana baýdagy]]
-| align=center width=148 | 
-|-
-| align=center width=148 | [[Ghana baýdagy]]
-| align=center width=148 | [[Ghana gerbi]]
-|}
-|-
-| align=center colspan=2 style="background: #ffffff;" | [[Image:LocationGhana.svg|250px]]
-|-
-| '''[[Paýtagt]]'''
-| [[Accra]]
-|-
-| '''[[Prezident]]'''
-| [[John Atta Mills]]
-|-
-| '''[[Dil]]'''
-| [[Iňlisçe]], [[Ga dili|Ga]], [[Twi dili|Twi]], [[Ewe dili|Ewe]], [[Dagbani dili|Dagbani]], [[Fante dili|Fante]], ...
-|-
-| '''[[Gimn]]'''
-| [[Ghana gimni|God Bless Our Homeland Ghana]]
-|-
-| '''[[Yüzölçümü]]'''
-| 238 540 km&sup2;
-|-
-| '''[[Ilat]]'''<br/>&nbsp;– ilat/km&sup2;
-| 4 952 081<br/>&nbsp;9,4/km&sup2;
-|-
-| '''[[Garaşsyzlyk]]'''
-| [[6 Mart]] [[1957]]
-|-
-| '''[[Pul]]'''
-| [[Cedi]]
-|-
-| '''[[Wagt]]'''
-| [[UTC]] +5
-|-
-| '''[[Telefon kod]]'''
-| 233
-|-
-| '''[[Internet TLD]]'''
-| .gh
-|}
+{{Infobox Country
+|conventional_long_name = Republic of Ghana
+|common_name = Ghana
+|image_flag = Flag of Ghana.svg
+|image_coat = Coat of arms of Ghana.png
+|image_map = LocationGhana.svg
+|national_motto = "Freedom and Justice"
+|national_anthem = [[God Bless Our Homeland Ghana]]
+|official_languages = [[English language|English]]
+|capital = [[Accra]]
+|latd=5 |latm=33 |latNS=N |longd=0 |longm=15 |longEW=W
+|largest_city = capital
+|demonym = Ghanaian
+|government_type = [[Constitutional democracy]]
+|leader_title1 = [[President of Ghana|President]]
+|leader_name1 = [[John Atta Mills]]
+|area_rank = 81st
+|area_magnitude = 1 E11
+|area_km2 = 238,535
+|area_sq_mi = 92,098 <!--Do not remove per [[WP:MOSNUM]]-->
+|percent_water = 3.5
+|population_estimate = 23,837,000
+|population_estimate_rank = 48th
+|population_estimate_year = 2009
+|population_census = 
+|population_census_year = 
+|population_density_km2 = 99.9
+|population_density_sq_mi = 258.8 <!--Do not remove per [[WP:MOSNUM]]-->
+|population_density_rank = 103rd
+|GDP_PPP = $34.214 billion
+|GDP_PPP_year = 2008
+|GDP_PPP_per_capita = $1,518
+|GDP_nominal         = $16.654 billion
+|GDP_nominal_year        = 2008
+|GDP_nominal_per_capita    = $739
+|sovereignty_type = Independence
+|sovereignty_note = from the [[United Kingdom]]
+|established_event1 = Declared
+|established_date1 = 6 March 1957
+|established_event2 = Republic
+|established_date2 = 1 July 1960
+|established_event3 = Current Constitution
+|established_date3 = 28 April 1992
+|HDI = {{increase}} 0.553
+|HDI_rank = 136th
+|HDI_year = 2007
+|HDI_category = <span style="color:#fc0;">medium</span>
+|currency = [[Ghanaian cedi]]
+|currency_code = GHS
+|country_code = GH
+|time_zone = [[GMT]]
+|utc_offset = 0
+|time_zone_DST = [[GMT]]
+|utc_offset_DST = 0
+|drives_on                    = right
+|cctld = [[.gh]]
+|calling_code = 233
+}}
+
 
 Gana Günbatar Afrikadaky döwlet. Paýtagty - Akkra. Tutýan meýdany - 238,54 müň inedördül kilometr. Administratiw taýdan 10 welaýata bölünýär. ilaty - 20,76 million adam. Döwlet dili - iňlis dili. Dini - hristian. Yslam we däp bolan käbir afrikan ynançlaram bar. Pul birligi sedi. Milli baýramy - Nowruz aýynyň 6-sy. Şol gün Gana ýurt garaşsyzlygyny yglan etdi (1957-nji ýyl). Gana Birleşen Milletler Guramasynyň, Afrika Birligi Guramasynyň, Afrika Bileşiginiň, Günbatar Afrika ýurtlarynyň Ykdysady jemgyýetiniň agzasy.
 
