*Empty MediaWiki Message*

--- a/Gana.mw
+++ b/Gana.mw
@@ -6,13 +6,13 @@
 |image_map = LocationGhana.svg
 |national_motto = "Freedom and Justice"
 |national_anthem = [[God Bless Our Homeland Ghana]]
-|official_languages = [[English language|English]]
+|official_languages = [[Iňlis dili]]
 |capital = [[Accra]]
 |latd=5 |latm=33 |latNS=N |longd=0 |longm=15 |longEW=W
 |largest_city = capital
 |demonym = Ghanaian
-|government_type = [[Constitutional democracy]]
-|leader_title1 = [[President of Ghana|President]]
+|government_type = [[Konstitusion demokratiýa]]
+|leader_title1 = [[Prezident]]
 |leader_name1 = [[John Atta Mills]]
 |area_rank = 81st
 |area_magnitude = 1 E11
@@ -33,26 +33,26 @@
 |GDP_nominal         = $16.654 billion
 |GDP_nominal_year        = 2008
 |GDP_nominal_per_capita    = $739
-|sovereignty_type = Independence
-|sovereignty_note = from the [[United Kingdom]]
-|established_event1 = Declared
-|established_date1 = 6 March 1957
-|established_event2 = Republic
-|established_date2 = 1 July 1960
-|established_event3 = Current Constitution
-|established_date3 = 28 April 1992
+|sovereignty_type = Garaşsyzlyk
+|sovereignty_note = [[Beýik Britaniýa]]dan
+|established_event1 = Yglan edildi
+|established_date1 = 6 mart 1957
+|established_event2 = Respublika
+|established_date2 = 1 iýul 1960
+|established_event3 = Häzirki konstitusiýa
+|established_date3 = 28 aprel 1992
 |HDI = {{increase}} 0.553
 |HDI_rank = 136th
 |HDI_year = 2007
-|HDI_category = <span style="color:#fc0;">medium</span>
-|currency = [[Ghanaian cedi]]
+|HDI_category = <span style="color:#fc0;">ortaça</span>
+|currency = [[sedi]]
 |currency_code = GHS
 |country_code = GH
 |time_zone = [[GMT]]
 |utc_offset = 0
 |time_zone_DST = [[GMT]]
 |utc_offset_DST = 0
-|drives_on                    = right
+|drives_on                    = sag
 |cctld = [[.gh]]
 |calling_code = 233
 }}
