*Empty MediaWiki Message*

--- a/Gana.mw
+++ b/Gana.mw
@@ -1,10 +1,10 @@
 {{Infobox Country
-|conventional_long_name = Republic of Ghana
-|common_name = Ghana
+|conventional_long_name = Gana Respublikasy
+|common_name = Gana
 |image_flag = Flag of Ghana.svg
 |image_coat = Coat of arms of Ghana.png
 |image_map = LocationGhana.svg
-|national_motto = "Freedom and Justice"
+|national_motto = "Erkinlik we Adalat"
 |national_anthem = [[God Bless Our Homeland Ghana]]
 |official_languages = [[Iňlis dili]]
 |capital = [[Accra]]
