*Empty MediaWiki Message*

--- a/Gana.mw
+++ b/Gana.mw
@@ -10,7 +10,7 @@
 |capital = [[Accra]]
 |latd=5 |latm=33 |latNS=N |longd=0 |longm=15 |longEW=W
 |largest_city = capital
-|demonym = Ghanaian
+|demonym = ganaly
 |government_type = [[Konstitusion demokratiýa]]
 |leader_title1 = [[Prezident]]
 |leader_name1 = [[John Atta Mills]]
