*Empty MediaWiki Message*

--- a/Gana.mw
+++ b/Gana.mw
@@ -27,10 +27,10 @@
 |population_density_km2 = 99.9
 |population_density_sq_mi = 258.8 <!--Do not remove per [[WP:MOSNUM]]-->
 |population_density_rank = 103rd
-|GDP_PPP = $34.214 billion
+|GDP_PPP = $34.214 milliard
 |GDP_PPP_year = 2008
 |GDP_PPP_per_capita = $1,518
-|GDP_nominal         = $16.654 billion
+|GDP_nominal         = $16.654 milliard
 |GDP_nominal_year        = 2008
 |GDP_nominal_per_capita    = $739
 |sovereignty_type = Garaşsyzlyk
@@ -48,9 +48,9 @@
 |currency = [[sedi]]
 |currency_code = GHS
 |country_code = GH
-|time_zone = [[GMT]]
+|time_zone = [[Grinwiç ortaça wagty|GOW]]
 |utc_offset = 0
-|time_zone_DST = [[GMT]]
+|time_zone_DST = [[Grinwiç ortaça wagty|GOW]]
 |utc_offset_DST = 0
 |drives_on                    = sag
 |cctld = [[.gh]]
