*Empty MediaWiki Message*

--- a/Gana.mw
+++ b/Gana.mw
@@ -7,26 +7,26 @@
 |national_motto = "Erkinlik we Adalat"
 |national_anthem = [[God Bless Our Homeland Ghana]]
 |official_languages = [[Iňlis dili]]
-|capital = [[Accra]]
+|capital = [[Akkra]]
 |latd=5 |latm=33 |latNS=N |longd=0 |longm=15 |longEW=W
 |largest_city = capital
 |demonym = ganaly
 |government_type = [[Konstitusion demokratiýa]]
 |leader_title1 = [[Prezident]]
 |leader_name1 = [[John Atta Mills]]
-|area_rank = 81st
+|area_rank = 81-nji
 |area_magnitude = 1 E11
 |area_km2 = 238,535
 |area_sq_mi = 92,098 <!--Do not remove per [[WP:MOSNUM]]-->
 |percent_water = 3.5
 |population_estimate = 23,837,000
-|population_estimate_rank = 48th
+|population_estimate_rank = 48-nji
 |population_estimate_year = 2009
 |population_census = 
 |population_census_year = 
 |population_density_km2 = 99.9
 |population_density_sq_mi = 258.8 <!--Do not remove per [[WP:MOSNUM]]-->
-|population_density_rank = 103rd
+|population_density_rank = 103-nji
 |GDP_PPP = $34.214 milliard
 |GDP_PPP_year = 2008
 |GDP_PPP_per_capita = $1,518
