*Empty MediaWiki Message*

--- a/Gana.mw
+++ b/Gana.mw
@@ -42,7 +42,7 @@
 |established_event3 = Häzirki konstitusiýa
 |established_date3 = 28 aprel 1992
 |HDI = {{increase}} 0.553
-|HDI_rank = 136th
+|HDI_rank = 136-njy
 |HDI_year = 2007
 |HDI_category = <span style="color:#fc0;">ortaça</span>
 |currency = [[sedi]]
