*Empty MediaWiki Message*

--- a/Benin.mw
+++ b/Benin.mw
@@ -1,3 +1,66 @@
+{{Infobox Country
+|native_name      =''République du Bénin'' 
+|conventional_long_name =Republic of Benin 
+|common_name      =Benin
+|image_flag       =Flag of Benin.svg 
+|image_coat       =Benin COA.png
+|image_map       =LocationBenin.svg 
+|national_motto     =''"Fraternité, Justice, Travail"''{{spaces|2}}<small>(fransuzça)<br/>"Doganlyk, Adalat, Zähmet"</small>
+|national_anthem    =''[[L'Aube Nouvelle]]''{{spaces|2}}<small>(fransuzça)<br/>''Täze günüň şapagy''</small>
+|official_languages   = [[Fransuz dili]]
+|languages_type = [[Ýerli dil]]
+|languages = [[Fon dili]], [[Ýoruba dili]]
+|demonym        = beninli
+|capital        =[[Porto-Nowo]]  
+|latd= 6|latm=28 |latNS=N |longd=2 |longm=36 |longEW=E 
+|largest_city      =[[Kotonu]]
+|government_type    = Köppartiýaly demokratiýa
+|leader_title1     =[[Prezident]]
+|leader_name1      =[[Ýaýi Boni]]
+|sovereignty_type    =Garaşsyzlyk
+|sovereignty_note    =[[Fransiýa]]dan
+|established_event1   =Sene
+|established_date1   =1 awgust, 1960
+|area_rank=101-nji
+|area_magnitude=1 E11
+|area_km2=112,622
+|area_sq_mi=43,484
+|percent_water=
+|population_estimate=8,935,000
+|population_estimate_rank=89-njy
+|population_estimate_year=2009
+|population_census=6,769,914
+|population_census_year=2002
+|population_density_km2=79.3
+|population_density_sq_mi=205.5
+|population_density_rank=118th
+|GDP_PPP        =$13.035 milliard
+|GDP_PPP_rank      =140-njy
+|GDP_PPP_year      =2008
+|GDP_PPP_per_capita   =$1,608 
+|GDP_PPP_per_capita_rank=166-njy
+|GDP_nominal      =$6.712 milliard
+|GDP_nominal_year    =2008
+|GDP_nominal_per_capita =$828 
+|Gini          =36.5
+|Gini_year       =2003
+|Gini_category     =<font color="#ffcc00">ortaça</font>
+|HDI          ={{increase}} 0.492
+|HDI_rank        =161-nji
+|HDI_year        =2007
+|HDI_category      =<font color="#e0584e">pes</font>
+|currency        =[[KFA franky]]
+|currency_code     =XOF
+|country_code      =
+|time_zone       =[[Günbatar Afrika wagty|GAW]]
+|utc_offset       =+1
+|time_zone_DST     =''bellenilmeýär''
+|utc_offset_DST     =+1
+|drives_on         =sag 
+|cctld         =[[.bj]]
+|calling_code      =229
+}}
+
 Benin Günbatar Afrikada ýerleşýän döwlet. 
 
 {{Afrikada ýerleşýän ýurtlar}}
