*Empty MediaWiki Message*

--- a/Benin.mw
+++ b/Benin.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 |native_name      =''République du Bénin'' 
-|conventional_long_name =Republic of Benin 
+|conventional_long_name =Benin Respublikasy 
 |common_name      =Benin
 |image_flag       =Flag of Benin.svg 
 |image_coat       =Benin COA.png
@@ -33,7 +33,7 @@
 |population_census_year=2002
 |population_density_km2=79.3
 |population_density_sq_mi=205.5
-|population_density_rank=118th
+|population_density_rank=118-nji
 |GDP_PPP        =$13.035 milliard
 |GDP_PPP_rank      =140-njy
 |GDP_PPP_year      =2008
