*Empty MediaWiki Message*

--- a/Mali.mw
+++ b/Mali.mw
@@ -1,56 +1,73 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0.5em 0 1em 1em; background: #ffffff; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Mali'''<br/>'''République du Mali'''</big></big>
-|-
-| style="background:#ffffff;" align=center colspan=2 |
-{| border=0 cellpadding=2 cellspacing=0
-| align=center width=148 | [[File:Flag of Mali.svg|125px|Mali baýdagy]]
-| align=center width=148 | 
-|-
-| align=center width=148 | [[Mali baýdagy]]
-| align=center width=148 | [[Mali gerbi]]
-|}
-|-
-| align=center colspan=2 style="background: #ffffff;" | [[File:LocationMali.svg|250px]]
-|-
-| '''[[Paýtagt]]'''
-| [[Bamako]]
-|-
-| '''[[Prezident]]'''
-| [[Amadou Toumani Touré]]
-|-
-| '''[[Dil]]'''
-| [[Fransuzça]]
-|-
-| '''[[Gimn]]'''
-| [[Mali gimni|Pour l'Afrique et pour toi, Mali]]
-|-
-| '''[[Yüzölçümü]]'''
-| 1 240 278 km&sup2;
-|-
-| '''[[Ilat]]'''<br/>&nbsp;– ilat/km&sup2;
-| 12 291 529<br/>&nbsp;9/km&sup2;
-|-
-| '''[[Garaşsyzlyk]]'''
-| [[22 Sentýabr]] [[1960]]
-|-
-| '''[[Pul]]'''
-| [[CFA franc]]
-|-
-| '''[[Wagt]]'''
-| [[UTC]] +0<br/>[[UTC]] +1
-|-
-| '''[[Telefon kod]]'''
-| 223
-|-
-| '''[[Internet TLD]]'''
-| .ml
-|}
+{{Infobox Country
+|native_name              = ''République du Mali''
+|conventional_long_name   = Mali Respublikasy
+|common_name              = Mali
+|image_flag               = Flag of Mali.svg
+|image_coat               = Mali coa.gif
+|image_map                = LocationMali.svg
+|national_motto           = "Un peuple, un but, une foi"<br/><small>"Bir halk, bir maksat, bir ynanç"</small>
+|national_anthem          = ''[[Pour l'Afrique et pour toi, Mali|Le Mali]]''<br/><small>"Mali"</small>
+|official_languages       = [[fransuz dili]]
+|languages_type = [[Ýerli diller]]
+|languages = [[bambara dili]] 
+|demonym                  = malili
+|capital                  = [[Bamako]]
+|latd=12 |latm=39 |latNS=N |longd=8 |longm=0 |longEW=W
+|largest_city = Bamako
+|government_type          = [[Ýarym president respublikasy]]
+|leader_title1            = [[Prezident]]
+|leader_name1             = [[Amadou Toumani Touré]]
+|area_rank                = 24-nji
+|area_magnitude           = 1 E12
+|area_km2                 = 1,240,192 <!--UN DYB-->
+|area_sq_mi               = 478,839 <!--Do not remove per [[WP:MOSNUM]]-->
+|percent_water            = 1.6
+|population_estimate      = 13,010,000
+|population_estimate_rank = 71-nji
+|population_estimate_year = 2009
+|population_census        = 
+|population_census_year   = 
+|population_density_km2   = 10.5
+|population_density_sq_mi = 27.2 <!--Do not remove per [[WP:MOSNUM]]-->
+|population_density_rank  = 207-nji
+|GDP_PPP                  = $15.084 milliard
+|GDP_PPP_rank             = 
+|GDP_PPP_year             = 2008
+|GDP_PPP_per_capita       = $1,129
+|GDP_PPP_per_capita_rank  = 
+|GDP_nominal              = $8.774 milliard
+|GDP_nominal_year         = 2008
+|GDP_nominal_per_capita   = $656
+|sovereignty_type         = Garaşsyzlyk
+|sovereignty_note         = Fransiýadan
+|established_event1       = Yglan edildi
+|established_date1        = 22 sentýabr, 1960
+|HDI                      = {{increase}} 0.380
+|HDI_rank                 = 173rd
+|HDI_year                 = 2007
+|HDI_category             = <font color="#e0584e">pes</font>
+|Gini                     = 50.5
+|Gini_year                = 1994
+|Gini_category            = <font color="red">ýokary</font>
+|currency                 = [[KFA franky]]
+|currency_code            = XOF
+|country_code             = MLI
+|time_zone                = [[GMT]]
+|utc_offset               = +0
+|time_zone_DST            = ''bellenilmeýär''
+|utc_offset_DST           = +0
+|drives_on                    = sag
+|cctld                    = [[.ml]]
+|calling_code             = 223
+|footnotes                =
+}}
 
-'''Mali''', bir [[döwlet]] ([[respublika]]) [[Afrika]]'da.
+
+'''Mali''' Günbatar Afrikada ýerleşýän [[döwlet]].
 
 {{Afrikada ýerleşýän ýurtlar}}
 
-[[Category:Mali|*]]
+[[Category:Afrika]]
 
 [[ace:Mali]]
 [[af:Mali]]
