--- a/Magtymguly.mw
+++ b/Magtymguly.mw
@@ -315,6 +315,7 @@ Magtymguly hakda gürrüňdeşlik:
 
 [[en:Magtymguly Pyragy]]
 [[fa:مختوم‌قلی فراغی]]
+[[hy:Մահթումկուլի]]
 [[kaa:Maqtumqulı]]
 [[ru:Махтумкули]]
 [[uk:Махтумкулі]]
