*Empty MediaWiki Message*

--- a/Şalom.mw
+++ b/Şalom.mw
@@ -1,4 +1,4 @@
-'''Şalom''' [[Stambul]], [[Türkiýe]]de neşir edilýän bir [[gazet]].
+'''Şalom''' ([[İvrit dili]]: שָׁלוֹם, [[Türkmen dili]]: Parahatçylyk) — [[Stambul]], [[Türkiýe]]de neşir edilýän bir [[gazet]].
 
 == Çykgytlar ==
 * [http://www.salom.com.tr Şalom (Türk dili)]
