*Empty MediaWiki Message*

--- a/Şalom.mw
+++ b/Şalom.mw
@@ -2,7 +2,7 @@
 
 == Çykgytlar ==
 * [http://www.salom.com.tr Şalom (Türk dili)]
-** [http://www.salom.com.tr/news/list/category/19-Judeo-Espanyol.aspx Şalom (Ladino)] 
+** [http://www.salom.com.tr/news/list/category/19-Judeo-Espanyol.aspx Şalom (Ladino dili)] 
 
 [[Kategoriýa:Gazetler]]
 
